Shows red lines for reference features passed to the browser in the chromosome view. Adds interval coordinates for reference and comparison conversions of interval. Shows block coordinates for reference and comparison blocks that are at least 110px wide (to avoid overlap of labels).

--- a/src/app/block-view-browser/block-view-browser.component.scss
+++ b/src/app/block-view-browser/block-view-browser.component.scss
@@ -38,3 +38,8 @@ rect.gene {
   fill: black;
   fill-opacity: 0.5;
 }
+
+#reference-interval-coordinates text,
+#comparison-interval-coordinates text {
+  font-size: 10px;
+}
